objects/AAKCS__Error_Log__c.object
<CustomObject>
    <description>Should any system errors be detected, then they will be logged here.  Workflows will alert system administrators of these errors for actioning.</description>
    <fields>
        <fullName>AAKCS__Description__c</fullName>
        <inlineHelpText>Error returned from Class/Method</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AAKCS__Program_Area__c</fullName>
        <inlineHelpText>Class/Method where the error was initiated from.</inlineHelpText>
        <label>Program Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAKCS__Status__c</fullName>
        <inlineHelpText>Use the status to indicate the current situation with this error.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAKCS__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Campaign Status Error Log</label>
    <listViews>
        <fullName>AAKCS__All</fullName>
        <columns>NAME</columns>
        <columns>AAKCS__Status__c</columns>
        <columns>AAKCS__Subject__c</columns>
        <columns>AAKCS__Program_Area__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AAKCS__Todays_Errors</fullName>
        <columns>NAME</columns>
        <columns>AAKCS__Status__c</columns>
        <columns>AAKCS__Subject__c</columns>
        <columns>AAKCS__Program_Area__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Errors</label>
    </listViews>
    <nameField>
        <displayFormat>EL{0000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Status Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>